Correction index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="favicon.ico">
   <link href="//fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-  <title>Pure JavaScript Excel</title>
+  <title>Excel на чистом JavaScript</title>
 </head>
 <body>
   <div id="app"></div>
